<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_starred"
        android:icon="@drawable/ic_star_outline_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_starred"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_delete"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"/>

</menu>