<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView1"
        android:layout_below="@+id/textRecentDB" />

    <TextView
        android:id="@+id/textRecentDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_recentDB"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPath"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="14dp"
        android:text="@string/title_databaseLocation"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonOpen"
        android:layout_alignLeft="@+id/textView1"
        android:layout_toLeftOf="@+id/buttonStorage"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/buttonStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/editTextPath"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_shape_notpressed"
        android:contentDescription="@string/desc_fileManager"
        android:paddingBottom="5dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="5dp"
        android:src="@drawable/ic_action_collection" />

    <Button
        android:id="@+id/buttonOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPath"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_drawable_button"
        android:text="@string/butt_open" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonOpen"
        android:layout_alignBottom="@+id/buttonOpen"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/buttonOpen"
        android:background="@drawable/selector_drawable_button"
        android:text="@string/butt_create" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>